# compilers

./: .gitignore
lab1/tut/btpc-windows/: btpc.pas  hello.pas
lab1/tut/p5/: hello.pas  pcom2.pas  pcom3.pas  prd  prr
lab11/: grammar.txt  instruction.txt  rbnf_grammar.txt
lab11/c_example/: calc  lexer.l  parser.tab.c  parser.tab.h  parser.y  run.sh
lab11/include/: driver.hpp
lab11/src/: CMakeLists.txt  driver.cpp  grammar_test.txt  input.txt  lexer.flex  main.cpp  parser.y
lab12/: CMakeLists.txt  rbnf_grammar.txt
lab12/include/: ast_tree.hpp  driver.hpp  scanner.hpp
lab12/src/: CMakeLists.txt  ast_tree.cpp  driver.cpp  input.txt  lexer.flex  main.cpp  parser.y
lab2/: astprint  go.mod  myexec  output.txt
lab2/my/: my.go
lab2/mydemo/: mydemo.go  mydemo_new.go
lab3/: package-lock.json  package.json  tsconfig.json
lab3/js/: input.txt  lexer.js  main.js  small.txt
lab3/source/: lexer.ts  main.ts
lab4/: package-lock.json  package.json  tsconfig.json
lab4/js/: compiler.js  fragment.js  input.txt  main.js  rules.txt  scanner.js  token.js  utils.js
lab4/source/: compiler.ts  fragment.ts  main.ts  scanner.ts  token.ts  utils.ts
lab5/: graph.dot  instructions.txt  package-lock.json  tsconfig.json
lab5/js/: automat.js  automat.js.map  compiler.js  compiler.js.map  fragment.js  fragment.js.map  input.txt  main.js  main.js.map  scanner.js  scanner.js.map  table.js  test.txt  token.js  token.js.map  utils.js  utils.js.map
lab5/source/: automat.ts  fragment.ts  main.ts  scanner.ts  token.ts  utils.ts
lab6/: CMakeLists.txt  input.txt  lex.yy.c  lexer.flex  main.cpp  out
lab7/: classes.py  grammar.txt  main.py  output.txt
lab8/: CMakeLists.txt  arithexpr_test.txt  grammar.txt  grammar_language_table.hpp  grammar_test.txt  hand_table.txt  input_2.txt  instruction.txt  tree.dot
lab8+10/: CMakeLists.txt  arith_language_table.hpp  arithexpr_test.txt  grammar_test.txt  grammars.txt  instruction.txt  report10.md  report8.md
lab8+10/include/: table_generator.hpp
lab8+10/include/analyzer/: table.hpp
lab8+10/src/analyzer/: scanner.cpp
lab8+10/src/calculator/: calculator.cpp  main.cpp
lab8+10/src/generator/: main.cpp
lab8/include/: calculator.hpp
lab8/include/analyzer/: node.hpp  parser.hpp  position.hpp
lab8/src/: CMakeLists.txt  lexer.flex  main.cpp  node.cpp  parser.cpp  position.cpp  scanner.cpp  table_generator.cpp  table_generator_main.cpp  token.cpp
lab8/src/analyzer/: CMakeLists.txt  node.cpp  parser.cpp  position.cpp  token.cpp
lab8/src/calculator/: CMakeLists.txt  lexer.flex  main.cpp
lab8/src/generator/: CMakeLists.txt  lexer.flex  main.cpp
lab8/src/include/: node.hpp  parser.hpp  scanner.hpp  table_generator.hpp  test.hpp  token.hpp
lab9/: CMakeLists.txt  grammar.txt  input.txt  output.txt  rbnf_grammar.txt  test.txt  tree.dot
lab9/src/: CMakeLists.txt  lexer.flex  main.cpp  node.cpp  parser.cpp  rule.cpp  scanner.cpp  token.cpp
lab9/src/include/: node.hpp  parser.hpp  rule.hpp  scanner.hpp  token.hpp
